--- a/WarOfShogunateDemo/Podfile
+++ b/WarOfShogunateDemo/Podfile
@@ -1,11 +1,12 @@
 # Uncomment the next line to define a global platform for your project
- source 'https://github.com/CocoaPods/Specs.git'
+ source 'https://cdn.cocoapods.org/'
  platform :ios, '10.0'
 
 target 'WarOfShogunateDemo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-
+  
+  project 'WarOfShogunateDemo'
   # Pods for WarOfShogunateDemo
   pod 'WarOfShogunate',:git=>'https://github.com/shendoublexiang/WarOfShogunate.git'
   
